--- a/RESTful_308youtube/WebContent/WEB-INF/web.xml
+++ b/RESTful_308youtube/WebContent/WEB-INF/web.xml
@@ -4,6 +4,16 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>RESTful_308youtube</display-name>
+	
+	
+  <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>jdbc/308tube</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>	
+	
+	
 	<welcome-file-list>
 		<welcome-file>readme.html</welcome-file>
 		<welcome-file>index.html</welcome-file>
